Organizando os arquivos em seus devidos lugares e adição de ícones

--- a/Git e Github/Assets/css/style.css
+++ b/Git e Github/Assets/css/style.css
@@ -1,6 +1,14 @@
+#navbarNav{
+justify-content: right;
+}
+
+.navbar-nav{
+    align-items: center;
+}
 #g-nav-1{
     background-color: rgb(71, 71, 71);
 }
+
 .navbar-brand{
     color:whitesmoke;
     font-family: 'Poiret One', sans-serif;
