--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -34,12 +34,18 @@ h1 {
 
 #g-git,
 #g-github {
-    margin: 20px;
+    margin: 50px;
+}
+section{
+    text-align: justify;
+}
+li{
+    list-style: none;
 }
 
 footer {
     width: 100%;
-    position: fixed;
+    position: relative;
     bottom: 0;
     text-align: center;
     font-size: 12px;
